fix menu sidebar dark mode

--- a/src/components/header/SideMenu/styles.module.css
+++ b/src/components/header/SideMenu/styles.module.css
@@ -11,7 +11,7 @@
   right: 0;
   width: 100vw;
   height: 100vh;
-  background: #fff;
+  background: hsl(var(--card));
   overflow-y: scroll;
 }
 
